(HJH)회원정보 반환시 회원메타정보 추가 로직 구현